[package]
name = "coca"
version = "0.1.0"
authors = ["Tristan Dannenberg <dtristan@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc", "nightly", "profile"]
alloc = []
nightly = []
profile = []

[package.metadata.docs.rs]
features = ["alloc", "nightly", "profile"]
rustdoc-args = ["--cfg", "docs_rs"]
