[package]
name = "coca"
version = "0.2.0" # When updating this, remember to update install instructions in README and html_root_url in lib.rs
authors = ["Tristan Dannenberg <dtristan@hotmail.de>"]
edition = "2018"
license = "Zlib OR Apache-2.0"
description = "Data structures with constant capacity"
keywords = ["no_std", "allocator", "vec", "queue"]
categories = ["no-std", "data-structures", "memory-management"]
repository = "https://github.com/teryror/coca"
readme = "README.md"

[package.metadata.docs.rs]
features = ["alloc", "nightly", "profile"]
rustdoc-args = ["--cfg", "docs_rs"]

[profile.test]
opt-level = 3

[features]
default = []
alloc = []
nightly = []
profile = []

[dev-dependencies]
rand_pcg = "0.2"
rand_core = "0.5"